--- a/index.html
+++ b/index.html
@@ -3,357 +3,121 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simply chocolate</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href=""
-          >Simply chocolate<img src="./images/logo.svg" alt="logo"
-        /></a>
+        <a href="./index.html"><span>Web</span>Studio</a>
 
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#made">How it's made</a></li>
-          <li><a href="#loved">Chocolate is loved</a></li>
+          <li>Studio</li>
+          <li>Portfolio</li>
+          <li>Contacts</li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="">FB</a></li>
-        <li><a href="">Inst</a></li>
-        <li><a href="">Twit</a></li>
-      </ul>
+
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <section>
-        <h1>
-          Treat yourself or a loved one to our finest ingredients for a moment
-          of pure delight!
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
 
-        <button type="button">Buy now</button>
-        <a href="#made">How it's made</a>
-        <a href="#footer">scroll down</a>
+        <button type="button">Order Service</button>
       </section>
 
       <section>
-        <h3>Unsurpassed taste</h3>
-        <p>
-          Crafted with the finest quality cocoa beans and a dedication to
-          perfection, each bite is a decadent experience that simply cannot be
-          matched. Savor the richness and complexity of our Unsurpassed Taste
-          and discover a new level of chocolate bliss.
-        </p>
-        <h3>Affordable price</h3>
-        <p>
-          Indulge in high-quality chocolate without breaking the bank with
-          Simply Chocolate's selection of affordable treats. Enjoy
-          mouth-watering truffles and velvety chocolate bars without sacrificing
-          taste or quality. Browse our selection and indulge in affordable
-          luxury today.
-        </p>
-        <h3>Own production</h3>
-        <p>
-          We take pride in our own production process, ensuring that every step
-          is carefully crafted to perfection. From selecting the finest
-          ingredients to handcrafting each piece, our attention to detail is
-          evident in every bite.
-        </p>
-      </section>
-
-      <section>
-        <h2>It all adds up to one exceptional <span>taste</span> sensation</h2>
-
         <ul>
           <li>
-            <img
-              src="./images/img-1.png"
-              alt="Milk Chocolate"
-              width="214"
-              height="160"
-            />
-            <p>Milk Chocolate</p>
-          </li>
-          <li>
-            <img src="./images/img-2.png" alt="Milk" width="214" height="160" />
-            <p>Milk</p>
-          </li>
-          <li>
-            <img src="./images/img-3.png" alt="Nuts" width="214" height="160" />
-            <p>Nuts</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-4.png"
-              alt="Semi - Sweet chocolate"
-              width="214"
-              height="160"
-            />
-            <p>Semi - Sweet chocolate</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-5.png"
-              alt="Cacao"
-              width="214"
-              height="160"
-            />
-            <p>Cacao</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-6.png"
-              alt="Raspberry"
-              width="214"
-              height="160"
-            />
-            <p>Raspberry</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-7.png"
-              alt="Coconut"
-              width="214"
-              height="160"
-            />
-            <p>Coconut</p>
-          </li>
-        </ul>
-      </section>
-
-      <section>
-        <h2 id="made">How it's <span>made</span>?</h2>
-
-        <img src="./images/image.jpg" alt="image" />
-        <h3>
-          Try our chocolates today and discover the perfect balance of flavor
-        </h3>
-
-        <ul>
-          <li>
-            Heat the milk in a saucepan without bringing it to a boil. Add sugar
-            and cocoa powder.
-          </li>
-          <li>
-            At the same time, prepare a water bath. Melt the butter on it.
-          </li>
-          <li>
-            "Mix" the milk mixture and already liquid butter. Mix thoroughly
-            with a silicone spatula so that the mass becomes uniform and silky.
-          </li>
-          <li>Heat the mixture over low heat, letting it barely boil.</li>
-          <li>
-            Pour the chocolate into special containers (can be replaced with ice
-            molds). Allow to cool and harden.
-          </li>
-        </ul>
-      </section>
-
-      <section>
-        <h2>Our <span>products</span></h2>
-
-        <ul>
-          <li>
-            <img
-              src="./images/tile-1.jpg"
-              alt="orange"
-              width="230"
-              height="201"
-            />
-            <h3>orange</h3>
-            <p>Dark chocolate</p>
-            <span>45 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/tile-2.jpg"
-              alt="APPLE&CRANBERRY"
-              width="230"
-              height="201"
-            />
-            <h3>APPLE&CRANBERRY</h3>
-            <p>Milk chocolate</p>
-            <span>50 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/tile-3.jpg"
-              alt="lime&sea salt"
-              width="230"
-              height="201"
-            />
-            <h3>lime&sea salt</h3>
-            <p>Dark chocolate</p>
-            <span>66 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/tile-4.jpg"
-              alt="pineapple"
-              width="230"
-              height="201"
-            />
-            <h3>pineapple</h3>
-            <p>Dark chocolate</p>
-            <span>54 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/tile-5.jpg"
-              alt="Classic"
-              width="230"
-              height="201"
-            />
-            <h3>Classic</h3>
-            <p>Milk chocolate</p>
-            <span>45 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/tile-6.jpg"
-              alt="honey"
-              width="230"
-              height="201"
-            />
-            <h3>honey</h3>
-            <p>Milk chocolate</p>
-            <span>50 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/tile-7.jpg"
-              alt="Roasted fruits"
-              width="230"
-              height="201"
-            />
-            <h3>Roasted fruits</h3>
-            <p>Dark chocolate</p>
-            <span>66 UAH</span>
-          </li>
-          <li>
-            <img
-              src="./images/tile-8.jpg"
-              alt="Classic"
-              width="230"
-              height="201"
-            />
-            <h3>Classic</h3>
-            <p>White chocolate</p>
-            <span>54 UAH</span>
-          </li>
-        </ul>
-      </section>
-
-      <section>
-        <h2><span>Top</span> sellers</h2>
-
-        <ul>
-          <li>
-            <img
-              src="./images/top-sellers-1.jpg"
-              alt="CHOCOLATE WITH NUTS"
-              width="368"
-              height="464"
-            />
-            <h3>CHOCOLATE WITH NUTS</h3>
-          </li>
-          <li>
-            <img
-              src="./images/top-sellers-2.jpg"
-              alt="CHOCOLATE WITH FRUITS"
-              width="368"
-              height="464"
-            />
-            <h3>CHOCOLATE WITH FRUITS</h3>
-          </li>
-          <li>
-            <img
-              src="./images/top-sellers-3.jpg"
-              alt="DARK CHOCOLATE"
-              width="368"
-              height="464"
-            />
-            <h3>DARK CHOCOLATE</h3>
-          </li>
-        </ul>
-      </section>
-
-      <section>
-        <h2 id="loved"><span>Chocolate</span> is loved</h2>
-
-        <ul>
-          <li>
-            <img
-              src="./images/photo-1.jpg"
-              alt="Victoria Dobrzhanska"
-              width="80"
-              height="80"
-            />
-            <h3>Victoria Dobrzhanska</h3>
+            <h3>Strategy</h3>
             <p>
-              I love this chocolate bar. Perfect combination of light crispy
-              wafer, covered in a thin layer chocolate.
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
             </p>
           </li>
           <li>
-            <img
-              src="./images/photo-2.jpg"
-              alt="Nazar Babenko"
-              width="80"
-              height="80"
-            />
-            <h3>Nazar Babenko</h3>
+            <h3>Punctuality</h3>
             <p>
-              This chocolate confection is a delight! A delight! The wafer is
-              light and crisp, the hazelnut cream is smooth, and the chocolate
-              is good.
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
             </p>
           </li>
           <li>
-            <img
-              src="./images/photo-3.jpg"
-              alt="Olena Kampusch"
-              width="80"
-              height="80"
-            />
-            <h3>Olena Kampusch</h3>
+            <h3>Diligence</h3>
             <p>
-              Chocolate is a family favourite treat. Love the delicious smooth
-              chocolate and the creaminess inside. The wafer is soft but
-              crunchy.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
+      </section>
 
-        <button type="button">Leave a review</button>
+      <section>
+        <h2>Our Team</h2>
+
+        <ul>
+          <li>
+            <img
+              src="./images/img.png"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img2.png"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img3.png"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img4.png"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
+    <footer>
+      <a href="./index.html"><span>Web</span>Studio</a>
 
-    <footer id="footer">
-      <h2><span>Chocolate</span> a delicious cure for a bad day</h2>
-
-      <p>Social networks</p>
-      <ul>
-        <li><a href="">Inst</a></li>
-        <li><a href="">FB</a></li>
-        <li><a href="">Twit</a></li>
-      </ul>
-
-      <p>Contact us</p>
-      <address>
-        <ul>
-          <li><a href="tel:+380684439426">+380 (68) 443-94-26</a></li>
-          <li>
-            <a href="mailto:simplychoc@gmail.com">simplychoc@gmail.com</a>
-          </li>
-        </ul>
-      </address>
-
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#made">How it's made</a></li>
-        <li><a href="#loved">Chocolate is loved</a></li>
-      </ul>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
