--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <a href="./index.html"><span>Web</span>Studio</a>
 
         <ul>
-          <li>Studio</li>
-          <li>Portfolio</li>
-          <li>Contacts</li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
 
