--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a href="./index.html">WebStudio</a>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -34,6 +34,8 @@
       <section>
         <ul>
           <li>
+            <h2>Our Feautes</h2>
+
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
@@ -70,7 +72,7 @@
         <ul>
           <li>
             <img
-              src="./images/img.png"
+              src="./images/img.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -80,7 +82,7 @@
           </li>
           <li>
             <img
-              src="./images/img2.png"
+              src="./images/img2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -90,7 +92,7 @@
           </li>
           <li>
             <img
-              src="./images/img3.png"
+              src="./images/img3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -100,7 +102,7 @@
           </li>
           <li>
             <img
-              src="./images/img4.png"
+              src="./images/img4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
@@ -112,7 +114,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html"><span>Web</span>Studio</a>
+      <a href="./index.html">WebStudio</a>
 
       <p>
         Increase the flow of customers and sales for your business with digital
